--- a/style.css
+++ b/style.css
@@ -137,3 +137,11 @@ h2 {
     height: 100%;
     background-color: #000000;
 }
+
+#songOneTitle, #songOneArtist,
+#songTwoTitle, #songTwoArtist,
+#songThreeTitle, #songThreeArtist,
+#songFourTitle, #songFourArtist {
+    color: black;
+    text-decoration: none;
+}
